--- a/WebAPIAssignment/WebAPIAssignment.csproj
+++ b/WebAPIAssignment/WebAPIAssignment.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.1" />
+    <PackageReference Include="WebDriverManager" Version="2.12.2" />
   </ItemGroup>
 
 </Project>
