--- a/CalculatorUnitTest/CalculatorUnitTest.csproj
+++ b/CalculatorUnitTest/CalculatorUnitTest.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CalculatorLogic\CalculatorLogic.csproj" />
+  </ItemGroup>
 </Project>
